# apexnerdlabs-dev-container-cookiecutter

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json  jupyterlab.docker-compose.yml  postCreateCommand.sh  postgres.docker-compose.yml  spark-cluster.docker-compose.yml
.github/: pr_requests.md
.github/workflows/: bundle-zip.yml
templates/development-environment/: cookiecutter.json  postgres.docker-compose.yml
templates/development-environment/hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
templates/development-environment/{{cookiecutter.project_slug}}/: README.md  postgres.docker-compose.yml
templates/development-environment/{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json  postCreateCommand.sh
templates/development-environment/{{cookiecutter.project_slug}}/{{cookiecutter.backend_slug}}/: README.md  alembic.ini  main.py  pyproject.toml  ruff.toml
templates/development-environment/{{cookiecutter.project_slug}}/{{cookiecutter.backend_slug}}/.alembic/: env.py
templates/development-environment/{{cookiecutter.project_slug}}/{{cookiecutter.backend_slug}}/tests/: test_{{cookiecutter.backend_slug}}.py
templates/development-environment/{{cookiecutter.project_slug}}/{{cookiecutter.frontend_slug}}/: package.json
