[project]
name = "{{cookiecutter.backend_slug}}"
version = "0.1.0"
description = "{{cookiecutter.backend_description}}"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "openai>=1.66.3",
    "psycopg>=3.2.6",
    "sanic>=24.12.0",
    "sqlmodel>=0.0.24",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "codecov>=2.1.13",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]
